TestSuite/errors/err0177.pas
var arr : array[,] of integer := (a:2);
begin

end.